# crm-agent

./: .env.example  .gitignore  README.md  agent.py  crm_skill.py  dataverse_client.py  function_app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/skills/: crm-opportunity
.github/workflows/: ci.yml
assets/: crm-agent-architecture.excalidraw
docs/: CONTEXT.md
docs/adr/: 0001-obo-with-wif.md  0002-self-hosted-mcp-sdk.md  0003-dual-cloud-parity.md  0004-http-mcp-transport-for-reference-agent.md  0005-llm-provider-abstraction.md  0006-prompt-as-file-module.md  0007-testing-discipline.md  0008-identity-based-storage.md
docs/deployment/: aad-setup.md  bicep-deploy.md  dataverse-setup.md  preflight.md  rehearsal-global.md
docs/operations/: monitoring.md  secret-rotation.md  troubleshooting.md
docs/planning/: monorepo-integration.md
infra/: README.md  main.bicep  parameters.china.json  parameters.global.json
infra/modules/: alerts.bicep  function-app.bicep  identity.bicep  monitoring.bicep
scripts/: cleanup.py  discover_fields.py  example.py  preflight.py
skills/crm-opportunity/: .env.example  .mcp.json  SKILL.md  requirements.txt
src/: asgi.py  auth.py  config.py  dataverse_client.py  flex_asgi.py  mcp_server.py
src/agent/: builder.py  mcp_client.py  route.py
src/preflight/: __init__.py  checks.py  core.py
tests/: test_auth.py  test_cloud_literals_lint.py  test_config.py  test_dataverse_client.py  test_docs_integrity.py  test_flex_asgi.py  test_integration.py  test_mcp_server.py  test_skill_bundle.py
(+36 files in other folders)
