[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crm-agent"
version = "0.1.0"
description = "CRM Agent Platform — MCP server + reference agent + skill bundle (Dynamics 365)"
requires-python = "==3.11.*"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
